<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/hint_search_haps"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort_menu"
        android:title="@string/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_sort_time_asc"
                    android:title="@string/btn_sort_time_asc"
                    android:checked="true" />
                <item
                    android:id="@+id/action_sort_time_desc"
                    android:title="@string/btn_sort_time_desc" />
                <item
                    android:id="@+id/action_sort_name"
                    android:title="@string/btn_sort_name" />
            </group>
        </menu>
    </item>

</menu>
